# gmail2tg

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
src/conf/: mod.rs  singleton.rs
